<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:scrollbars="none"
  tools:context="com.tomisyourname.myappportfolio.MainActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
      android:id="@+id/tv_title"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_centerHorizontal="true"
      android:gravity="center"
      android:text="@string/my_nanodegree_apps"
      android:textColor="@color/default_text_color"
      android:textSize="@dimen/text_size_title" />

    <Button
      android:id="@+id/btn_spotify_sctream"
      style="@style/CustomButtonInMainPage"
      android:layout_below="@id/tv_title"
      android:onClick="onClick"
      android:text="@string/spotify_streamer" />

    <Button
      android:id="@+id/btn_scores_app"
      style="@style/CustomButtonInMainPage"
      android:layout_below="@id/btn_spotify_sctream"
      android:onClick="onClick"
      android:text="@string/scores_app" />

    <Button
      android:id="@+id/btn_library_app"
      style="@style/CustomButtonInMainPage"
      android:layout_below="@id/btn_scores_app"
      android:onClick="onClick"
      android:text="@string/library_app" />

    <Button
      android:id="@+id/btn_build_it_bigger"
      style="@style/CustomButtonInMainPage"
      android:layout_below="@id/btn_library_app"
      android:onClick="onClick"
      android:text="@string/build_it_bigger" />

    <Button
      android:id="@+id/btn_xyz_reader"
      style="@style/CustomButtonInMainPage"
      android:layout_below="@id/btn_build_it_bigger"
      android:onClick="onClick"
      android:text="@string/xyz_reader" />

    <Button
      android:id="@+id/btn_capstone"
      style="@style/CustomButtonInMainPage"
      android:layout_below="@id/btn_xyz_reader"
      android:background="@color/capstone_button"
      android:onClick="onClick"
      android:text="@string/capstone" />

  </RelativeLayout>


</ScrollView>
